--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
 
   "name": "fhr-jake",
 
-  "version": "2.5.6",
+  "version": "2.5.7",
 
-  "description": "Facebook-chat-api deployed by Kanzu and HZI Team remade by Jake Dev",
+  "description": "A Facebook-Chat-API deployed by Kanzu and HZI Team, Remade by Jake Dev",
 
   "main": "Index.js",
 
