--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 
-  "name": "fhr-jake",
+  "name": "beta-fhr",
 
-  "version": "2.5.7",
+  "version": "5.3.3",
 
   "description": "A Facebook-Chat-API deployed by Kanzu and HZI Team, Remade by Jake Dev",
 
